# tauri-plugin-btleplug

./: Cargo.toml  README.md  build.rs
.changes/: config.json  initial-release.md  readme.md
android/: build.gradle.kts  proguard-rules.pro
android/src/androidTest/java/: ExampleInstrumentedTest.kt
android/src/main/: AndroidManifest.xml
android/src/main/java/: BtleplugPlugin.kt
android/src/test/java/: ExampleUnitTest.kt
examples/tauri-app/: bun.lockb
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-app/src-tauri/src/: lib.rs
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: check_permission.toml
permissions/schemas/: schema.json
src/: desktop.rs  error.rs  lib.rs  mobile.rs  permission.rs
src/java/: btleplug_plugin.rs  mod.rs  utils.rs
