[package]
name = "tauri-plugin-btleplug"
version = "0.0.0"
authors = ["You"]
description = ""
edition = "2021"
rust-version = "1.70"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-btleplug"

[dependencies]
btleplug = "0.11.5"
serde = "1.0.203"
tauri = { version = "2.0.0-beta.8" }
thiserror = "1.0.61"
once_cell = "1.19.0"

[target."cfg(target_os = \"android\")".dependencies]
jni = "0.19.0"

[build-dependencies]
tauri-plugin = { version = "2.0.0-beta.6", features = ["build"] }
